name:                hs-arbor-logger
version:             2.0.0
-- synopsis:
-- description:
homepage:            https://github.com/kazu-yamamoto/logger
license:             MIT
license-file:        LICENSE
author:              Michael Snoyman
maintainer:          michael@snoyman.com
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Arbor.Logger
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , fast-logger
                     , monad-logger
                     , transformers
                     , transformers-base
                     , text
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/packetloop/arbor-logger
